Fix url & evosuite runtool.